# oil-price-prediction-agent

./: .gitignore  .python-version  README.md  main.py  oil_price_prediction_agent.ipynb  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
agents/: __init__.py  analysis_agents.py  evaluation_agent.py  research_agents.py
config/: __init__.py  agent_config.py
docs/: PROJECT_GUIDE.md
memory/: __init__.py  memory_bank.py  session_manager.py
models/: __init__.py  data_models.py
utils/: __init__.py  observability.py  visualization.py
